# slang2webgpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
App/: app.cpp  app.h
Mesh/: mesh.cpp  mesh.h
Render/: render.cpp  render.h
examples/: example.cpp
shaders/: rasterization.wgsl  vector_add.wgsl
src/: main.cpp
src/app/: app.cpp  app.h
src/render/: render.cpp  render.h
src/utils/: mesh.h  utils.cpp  utils.h
